added new para to index.html

--- a/index.html
+++ b/index.html
@@ -4,5 +4,23 @@
     </title>
     <body>
         hello...
+
+
+        <p>
+            This paragraph
+            contains a lot of lines
+            in the source code,
+            but the browser
+            ignores it.
+            </p>
+            
+            <p>
+            This paragraph
+            contains         a lot of spaces
+            in the source         code,
+            but the        browser
+            ignores it.
+            </p>
+            
     </body>
 </html>
